--- a/assets/scss/base/_global.scss
+++ b/assets/scss/base/_global.scss
@@ -4,6 +4,10 @@
   font-family: var.$font-tamil;
 }
 
+.text-uppercase {
+  text-transform: uppercase;
+}
+
 .color-anim {
   transition: 500ms;
   animation: color-change 10s infinite;
