--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -9,6 +9,7 @@
   border: none;
   outline: none;
   display: inline-block;
+  cursor: pointer;
 
   &-primary {
     background-color: func.theme-colors();
@@ -16,6 +17,18 @@
 
     &:hover {
       background-color: func.theme-colors("primary-hover");
+    }
+  }
+  
+  &-primary-outlined {
+    @extend .btn;
+    background-color: #fff;
+    border: 2px solid func.theme-colors();
+    color: func.theme-colors();
+
+    &:hover {
+      background-color: func.theme-colors();
+      color: #fff;
     }
   }
 }
