--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1041,4 +1041,58 @@ a {
   filter: grayscale(0);
 }
 
+.courses {
+  padding: 8rem 20rem;
+  background-color: #3f43fd;
+}
+.courses--heading {
+  text-align: center;
+}
+.courses--heading h2 {
+  font-size: 2rem;
+  color: #fff;
+}
+.courses--heading p {
+  color: #dfdfdf;
+}
+.courses-cards {
+  display: flex;
+  justify-content: space-between;
+}
+.courses-card {
+  background-color: #fff;
+  max-width: 380px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.courses-card--img {
+  width: 380px;
+}
+.courses-card--body {
+  padding: 2rem;
+}
+.courses-card--body h4 {
+  font-size: 1.5rem;
+}
+.courses-card--body p {
+  color: gray;
+  line-height: 1.5;
+}
+.courses-card a {
+  color: rgba(0, 0, 0, 0.938);
+}
+.courses-card:hover {
+  box-shadow: 2px 2px 20px 5px rgba(54, 54, 54, 0.5);
+}
+.courses--info {
+  text-align: center;
+  color: whitesmoke;
+}
+.courses--info a {
+  color: #fff;
+}
+.courses--info a:hover {
+  text-shadow: 2px 2px 10px #000;
+}
+
 /*# sourceMappingURL=style.css.map */
