--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,6 +5,7 @@
 // Components
 @import "./components/buttons";
 @import "./components/badges";
+@import "./components/forms";
 
 // Layouts
 @import "./layouts/header";
@@ -19,3 +20,4 @@
 @import "./pages/about";
 @import "./pages/roadmap";
 @import "./pages/courses";
+@import "./pages/contact";
