--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,6 +69,30 @@ a {
   color: #fff;
 }
 
+.form-control {
+  padding: 0.8rem 1.5rem;
+  width: 100%;
+  background-color: #f7f7f7;
+  border: none;
+  border-radius: 5px;
+  outline: none;
+}
+.form-control:focus {
+  border: 2px solid #3f43fd;
+}
+
+.resize-x {
+  resize: horizontal;
+}
+
+.resize-y {
+  resize: vertical;
+}
+
+.resize-none {
+  resize: none;
+}
+
 .header {
   padding: 1rem 20rem;
   display: flex;
@@ -1093,6 +1117,28 @@ a {
 }
 .courses--info a:hover {
   text-shadow: 2px 2px 10px #000;
+}
+
+.contact {
+  padding: 8rem 20rem;
+  background-color: #e0e0e0;
+}
+.contact-card {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff;
+  padding: 2rem 3rem;
+  border-radius: 0.5rem;
+}
+.contact-card--contents {
+  flex-grow: 1;
+}
+.contact-card--contents h4 {
+  font-size: 1.2rem;
+}
+.contact-card--contents p {
+  color: gray;
 }
 
 /*# sourceMappingURL=style.css.map */
