--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,6 +10,7 @@
 // Layouts
 @import "./layouts/header";
 @import "./layouts/background_elements";
+@import "./layouts/footer";
 
 // Utilities
 @import "./utilities/animations";
